--- a/sitemap-sniffer/popup.html
+++ b/sitemap-sniffer/popup.html
@@ -1,32 +1,49 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <style>
-      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial; margin: 12px; width: 360px; }
-      .title { font-weight: 700; font-size: 14px; margin-bottom: 8px; }
-      .meta { font-size: 12px; opacity: 0.8; margin-bottom: 10px; }
-      .row { display: flex; gap: 8px; margin-bottom: 10px; }
-      button { padding: 8px 10px; cursor: pointer; }
-      button.primary { flex: 1; }
-      textarea { width: 100%; height: 260px; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace; font-size: 11px; }
-      .small { font-size: 11px; opacity: 0.75; margin-top: 8px; line-height: 1.35; }
-      a { color: inherit; }
-    </style>
-  </head>
-  <body>
-    <div class="title" id="site">Sitemap</div>
-    <div class="meta" id="meta">Loading…</div>
+<head>
+<meta charset="utf-8" />
+<style>
+  body { font-family: system-ui; margin:12px; width:380px; }
+  .title { font-weight:700; font-size:14px; margin-bottom:4px; }
+  .meta { font-size:12px; opacity:0.8; margin-bottom:10px; }
+  .tabs { display:flex; margin-bottom:10px; }
+  .tab { flex:1; padding:8px; cursor:pointer; text-align:center; border:1px solid #ccc; }
+  .tab.active { background:#111; color:white; }
+  .section { display:none; }
+  .section.active { display:block; }
+  .row { display:flex; gap:8px; margin-bottom:10px; }
+  button { padding:8px 10px; cursor:pointer; }
+  button.primary { flex:1; }
+  textarea { width:100%; height:250px; font-size:11px; }
+  .stat { font-size:13px; margin-bottom:6px; }
+  .small { font-size:11px; opacity:0.75; margin-top:6px; line-height:1.35; }
+  a { color: inherit; }
+</style>
+</head>
+<body>
 
+  <div class="title" id="site">Sitemap</div>
+  <div class="meta" id="meta">Loading…</div>
+
+  <div class="tabs">
+    <div class="tab active" data-tab="basic">All URLs</div>
+    <div class="tab" data-tab="advanced">Advanced</div>
+  </div>
+
+  <div id="basic" class="section active">
     <div class="row">
       <button class="primary" id="copy">Copy URLs</button>
       <button id="refresh">Refresh</button>
     </div>
-
     <textarea id="urls" readonly></textarea>
-
     <div class="small" id="detail"></div>
+  </div>
 
-    <script src="popup.js"></script>
-  </body>
+  <div id="advanced" class="section">
+    <div id="stats"></div>
+    <div id="depth"></div>
+  </div>
+
+  <script src="popup.js"></script>
+</body>
 </html>
