--- a/sitemap-sniffer/popup.html
+++ b/sitemap-sniffer/popup.html
@@ -6,15 +6,31 @@
   body { font-family: system-ui; margin:12px; width:380px; }
   .title { font-weight:700; font-size:14px; margin-bottom:4px; }
   .meta { font-size:12px; opacity:0.8; margin-bottom:10px; }
+
   .tabs { display:flex; margin-bottom:10px; }
-  .tab { flex:1; padding:8px; cursor:pointer; text-align:center; border:1px solid #ccc; }
+  .tab { flex:1; padding:8px; cursor:pointer; text-align:center; border:1px solid #ccc; user-select:none; }
   .tab.active { background:#111; color:white; }
+
   .section { display:none; }
   .section.active { display:block; }
+
   .row { display:flex; gap:8px; margin-bottom:10px; }
   button { padding:8px 10px; cursor:pointer; }
   button.primary { flex:1; }
-  textarea { width:100%; height:250px; font-size:11px; }
+
+  .filters { display:flex; gap:8px; margin: 8px 0 10px; }
+  .filters input, .filters select {
+    width: 100%;
+    padding: 8px;
+    font-size: 12px;
+  }
+
+  .filters .col { flex: 1; }
+
+  .actions2 { display:flex; gap:8px; margin-bottom:10px; }
+  .actions2 button { flex:1; }
+
+  textarea { width:100%; height:240px; font-size:11px; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace; }
   .stat { font-size:13px; margin-bottom:6px; }
   .small { font-size:11px; opacity:0.75; margin-top:6px; line-height:1.35; }
   a { color: inherit; }
@@ -32,9 +48,40 @@
 
   <div id="basic" class="section active">
     <div class="row">
-      <button class="primary" id="copy">Copy URLs</button>
+      <button class="primary" id="copy">Copy ALL</button>
       <button id="refresh">Refresh</button>
     </div>
+
+    <div class="filters">
+      <div class="col">
+        <input id="q" placeholder="Search (e.g. j-scent, /collections/, gift-card)" />
+      </div>
+    </div>
+
+    <div class="filters">
+      <div class="col">
+        <select id="type">
+          <option value="__all__">Type: All</option>
+          <option value="products">products</option>
+          <option value="collections">collections</option>
+          <option value="pages">pages</option>
+          <option value="blogs">blogs</option>
+          <option value="root">root</option>
+        </select>
+      </div>
+      <div class="col">
+        <select id="locale">
+          <option value="__all__">Locale: All</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="actions2">
+      <button id="apply">Apply</button>
+      <button id="copyFiltered">Copy Filtered</button>
+      <button id="clear">Clear</button>
+    </div>
+
     <textarea id="urls" readonly></textarea>
     <div class="small" id="detail"></div>
   </div>
