--- a/sitemap-sniffer/popup.html
+++ b/sitemap-sniffer/popup.html
@@ -24,13 +24,27 @@
     padding: 8px;
     font-size: 12px;
   }
-
   .filters .col { flex: 1; }
 
   .actions2 { display:flex; gap:8px; margin-bottom:10px; }
   .actions2 button { flex:1; }
 
-  textarea { width:100%; height:240px; font-size:11px; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace; }
+  .actions3 { display:flex; gap:8px; margin-bottom:10px; }
+  .actions3 button { flex:1; }
+
+  .pager { display:flex; gap:8px; align-items:center; margin-bottom:10px; }
+  .pager select { padding:8px; font-size:12px; }
+  .pager button { padding:8px 10px; }
+  .pager .spacer { flex:1; }
+  .pager .info { font-size:12px; opacity:0.85; white-space:nowrap; }
+
+  textarea {
+    width:100%;
+    height:220px;
+    font-size:11px;
+    font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, monospace;
+  }
+
   .stat { font-size:13px; margin-bottom:6px; }
   .small { font-size:11px; opacity:0.75; margin-top:6px; line-height:1.35; }
   a { color: inherit; }
@@ -82,7 +96,35 @@
       <button id="clear">Clear</button>
     </div>
 
+    <div class="pager">
+      <select id="pageSize">
+        <option value="50">Page size: 50</option>
+        <option value="100">Page size: 100</option>
+        <option value="200" selected>Page size: 200</option>
+        <option value="500">Page size: 500</option>
+      </select>
+
+      <div class="spacer"></div>
+
+      <button id="prevPage">Prev</button>
+      <button id="nextPage">Next</button>
+      <div class="info" id="pageInfo">Page 1 of 1</div>
+    </div>
+
     <textarea id="urls" readonly></textarea>
+
+    <div class="actions3">
+      <button id="openSitemap">Open Sitemap</button>
+      <button id="openRobots">Open robots.txt</button>
+      <button id="exportJson">Export JSON</button>
+    </div>
+
+    <div class="actions3">
+      <button id="exportJsonFiltered">Export Filtered JSON</button>
+      <button id="copyPage">Copy Page</button>
+      <button id="noop" disabled style="opacity:.6; cursor:default;"> </button>
+    </div>
+
     <div class="small" id="detail"></div>
   </div>
 
