Add alerts section and implement advanced analysis features in popup.js (codex)

--- a/sitemap-sniffer/popup.html
+++ b/sitemap-sniffer/popup.html
@@ -129,6 +129,7 @@
   </div>
 
   <div id="advanced" class="section">
+    <div id="alerts"></div>
     <div id="stats"></div>
     <div id="depth"></div>
   </div>
